* 2014-03-17 - thorben.betten@open-xchange.com

 - Fix for bug 29983: Acquire row lock prior to performing table modifications

* 2014-03-13 - thorben.betten@open-xchange.com

 - Fix for bug 29983: Perform a single UPDATE statement to change values and added retry mechanism in case of possibly detected deadlock
 - Fix for bug 31551: Do not perform intermediate ''auto-commit=true'' while processing a transaction

* 2014-03-12 - thorben.betten@open-xchange.com

 - Fix for bug 28587: Ignore unused flags/permissions on access-combination equality check + Clone access-combination fetched from cache, do not operate on it

* 2014-03-06 - thorben.betten@open-xchange.com

 - Fix for bug 30434: Keep proper date information on SOAP to Java conversion

* 2014-01-15 - choeger@open-xchange.com

 - Fix for bug 30371: adding capabilities does not work when using admin
   plugins such as autocontextid, reseller, ...

* 2014-01-10 - thorben.betten@open-xchange.com

 - Fix for bug 30568: Invalidate "Capabilities" cache at various modifying methods

* 2013-12-03 - thorben.betten@open-xchange.com

 - Fix for bug 30144: Properly set login mappings (no "null" strings) in case autocontextid is active

* 2013-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 29612: Possible to set user attributes via SOAP (patch provided by choeger)

* 2013-10-11 - thorben.betten@open-xchange.com

 - Fix for bug 29251: Push back read-write connection into pool using after-reading flag

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29160: Examine passed String via SOAP to be not empty (not null and length greater than 0)
 - Fix for bug 20582: Perform an ignore-case equality check for E-Mail addresses

* 2013-09-16 - choeger@open-xchange.com

 - Fix for bug 28830: oxsysreport is collecting unneeded protected data

* 2013-08-08 - choeger@open-xchange.com

 - Fix for bug 28157: generatempasswd returns "0" even if it fails

* 2013-06-12 - thorben.betten@open-xchange.com
