@@ -73,6 +73,7 @@ import com.openexchange.admin.soap.user.dataobjects.User;
  *         &lt;element name="usrdata" type="{http://dataobjects.soap.admin.openexchange.com/xsd}User" minOccurs="0"/>
  *         &lt;element name="capsToAdd" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
  *         &lt;element name="capsToRemove" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
+ *         &lt;element name="capsToDrop" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
  *         &lt;element name="auth" type="{http://dataobjects.rmi.admin.openexchange.com/xsd}Credentials" minOccurs="0"/>
  *       &lt;/sequence>
  *     &lt;/restriction>
@@ -88,6 +89,7 @@ import com.openexchange.admin.soap.user.dataobjects.User;
     "user",
     "capsToAdd",
     "capsToRemove",
+    "capsToDrop",
     "auth"
 })
 @XmlRootElement(name = "changeCapabilities")
@@ -108,6 +110,8 @@ public final class ChangeCapabilities {
     protected String capsToAdd;
     @XmlElement(nillable = true)
     protected String capsToRemove;
+    @XmlElement(nillable = true)
+    protected String capsToDrop;
     @XmlElement(nillable = true)
     protected Credentials auth;
 
@@ -173,6 +177,14 @@ public final class ChangeCapabilities {
 
     public void setCapsToRemove(String capsToRemove) {
         this.capsToRemove = capsToRemove;
+    }
+
+    public String getCapsToDrop() {
+        return capsToRemove;
+    }
+
+    public void setCapsToDrop(String capsToDrop) {
+        this.capsToDrop = capsToDrop;
     }
 
     /**
