@@ -1,3 +1,7 @@
+* 2014-03-18 - thorben.betten@open-xchange.com
+
+ - Fix for bug 31611: Properly re-add capability and added option to clean capabilities from storage
+
 * 2014-03-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 29983: Acquire row lock prior to performing table modifications
